--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "redux-duck": "^1.0.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "react-router-dom": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
